Prevent video from overlapping logo

--- a/css/master.scss
+++ b/css/master.scss
@@ -31,3 +31,8 @@ hr {
 nav {
     background: black;
 }
+
+#logo {
+  max-width: 300px;
+  width: 100%;
+}
